# rust_kahoot

kahoot/: Cargo.toml  build.sh  login.js  main.js  package-lock.json  package.json
kahoot/src/: lib.rs
kahoot/src/components/: chat.rs  login.rs
kahoot/src/services/: websocket.rs
server/: Cargo.toml
server/src/: main.rs  server.rs  session.rs
server/static/: index.html  pkg  room.html
